wip newsgpt deployed with newsgpt lib
Signed-off-by: youliang <tan_you_liang@hotmail.com>

--- a/langchain-test.ipynb
+++ b/langchain-test.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,15 +44,23 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Run Do Web Scrapper"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['https://www.wsj.com/news/technology', 'https://www.nytimes.com/section/technology', 'https://www.apnews.com/hub/technology', 'https://www.bbc.com/news/technology']\n"
+      "['https://www.wsj.com/news/sports', 'https://www.nytimes.com/section/sports', 'https://www.apnews.com/hub/sports', 'https://www.bbc.com/sport']\n"
      ]
     }
    ],
@@ -62,7 +70,7 @@
     "\n",
     "from langchain.document_loaders import SeleniumURLLoader\n",
     "\n",
-    "news_category = NewsCategory.TECHNOLOGY\n",
+    "news_category = NewsCategory.SPORTS\n",
     "urls = news_urls_to_category(news_category)\n",
     "print(urls)\n",
     "\n",
@@ -72,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -81,12 +89,13 @@
      "text": [
       "4\n",
       "<class 'langchain.schema.Document'>\n",
-      "3621\n",
-      "2350\n",
-      "20366\n",
-      "7294\n",
+      "3144\n",
+      "3919\n",
+      "13222\n",
+      "7226\n",
+      " size after truncation of docs\n",
       "3000\n",
-      "2350\n",
+      "3000\n",
       "3000\n",
       "3000\n"
      ]
@@ -186,9 +195,12 @@
    "source": [
     "from langchain.llms import AzureOpenAI\n",
     "\n",
+    "MODEL_NAME = \"text_curie-001\"\n",
+    "MODEL_NAME = \"text-davinci-003\" # Davinci is 10x more expensive, use curie when testing\n",
+    "\n",
     "llm = AzureOpenAI(\n",
-    "    deployment_name=\"text-davinci-003\",\n",
-    "    model_name=\"text-davinci-003\",\n",
+    "    deployment_name=MODEL_NAME,\n",
+    "    model_name=MODEL_NAME,\n",
     "    max_tokens=1000)  # default is 16 in openai API\n"
    ]
   },
@@ -243,17 +255,27 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4) Run Map reduce with LangChain"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      ":\n",
       "\n",
+      "Shohei Ohtani of Major League Baseball is proving to be an elite hitter, being able to replicate the best pitches he faces. China's Ding Liren won the World Chess Championship in a dramatic match, and NFL star Lamar Jackson signed a record-breaking contract. QBs dominated the NFL Draft, while basketball star Brittney Griner expressed hope for her future and concern for Americans still held overseas. Giannis Antetokounmpo's \"failure\" speech went viral, and the New York Jets and Knicks both took action. The debate over \"participation trophies\" was tackled, and Washington is preparing for a football apocalypse as the Jets try to acquire Aaron Rodgers. Max Scherzer was suspended for using \"sticky stuff,\" the Oakland A's intend to move to Las Vegas, and the Tampa Bay Rays tied an MLB record with 13 straight wins. The Olympics President proposed a plan for the return of Russian athletes, and the world track and field banned transgender athletes from women's events. German soccer team is offering free tickets to increase attendance, and Manchester City humbled Arsenal in a match. UConn won the NCAA Men's Basketball Title, and a record 9.9 million people tuned in for the NCAA Women's Basketball Final. A dramatic buzzer-beater reveals San Diego State's NCAA Title chase, and a TV show is climbing back up the English soccer ladder. Stephen Curry scored a record-breaking 50 points to lead the Golden State Warriors to victory over the Sacramento Kings in Game 7 of their first-round series. The Knicks absorbed a blow from the Miami Heat in Game 1 of their Eastern Conference semi-final battle. The Toronto Maple Leafs were victorious in the first round of the NHL playoffs, and Japan has proposed a redevelopment plan to level the Meiji Jingu Stadium. Sergio Perez won the Azerbaijan Grand Prix for Red Bull, with Max Verstappen coming in second for the team's third 1-2 finish of the season. The 2023 NFL Draft saw the Philadelphia Eagles, Detroit Lions, and Green Bay Packers make their picks. The Knicks and Heat have a lively postseason history, and Daniel Murphy is attempting a comeback in the independent minor leagues. Trae Young, Jaylen Brown, and Mikal Bridges of the NBA are learning to handle the pressure of the spotlight. Jimmy Butler scored 36 points, including a go-ahead basket with 11.4 seconds remaining, as the Miami Heat defeated the New York Knicks 108-101 in the second round of the playoffs. The Houston Texans and Philadelphia Eagles were given the highest grades in the NFL draft due to their selections. Texas Rangers ace Jacob deGrom was placed on the 15-day injured list due to right forearm tightness, and Philadelphia Phillies star Bryce Harper could return to the lineup as early as Tuesday. The San Diego Padres rallied to sweep a two-game series in Mexico City against the San Francisco Giants. Caleb Williams of Southern California and North Carolina's Drake Maye are already being projected as the top two picks in the 2024 NFL draft. Erling Haaland and Harry Kane both scored landmark goals on Sunday, with Haaland's helping Manchester City move closer to a treble of trophies. Liverpool boss Jurgen Klopp questioned referee Paul Tierney's decisions after the Reds' 4-3 win over Tottenham, and the youthful Kings forced a Game 7 against the Warriors. Memphis Grizzlies sparkplug Dillon Brooks was fined $25,000 for not talking to the media. Manchester United's Bruno Fernandes scored the only goal of the game to secure a 1-0 win over Aston Villa. American golfer Tony Finau won the Mexico Open, Mark Selby compiled a 147 in the final but eventually lost out to Luca Brecel in the World Snooker Championship. Russian tennis player Daria Kasatkina expressed her joy at returning to Wimbledon, and a number of key questions were raised after the historic Six Nations tournament. Newcastle United beat Southampton 2-0, while Leeds United were on the brink of relegation. Exeter were eliminated from the Champions Cup by La Rochelle, and Barcelona's Alexia Putellas made her return from an ACL injury. Inter Milan's Achraf Hakimi was sent off in a game with Paris Saint-Germain, and Manchester United fans held a protest at Aston Villa. Simon Yates secured the Tour de Romandie win, and Manchester City manager Mike Taylor credited their current form to their impressive goal difference. Finally, the legacy of Dutch football legend Johan Cruyff was remembered on what would have been his 75th birthday. \n",
       "\n",
-      "Technology is playing an increasingly important role in our lives and the news is filled with stories reflecting that. Elon Musk is taking a unique approach to Tesla's price cuts in order to survive. Big tech earnings have been good and shares have risen, but growth has not been as impressive as Microsoft, Amazon and Google. Social-media shopping scams are targeting young adults and tech companies are beginning to ask for payment for content created by millions of people. Google has lost its bid to escape a digital-ad antitrust case, but ChatGPT has been allowed to resume operations in Italy after making data-privacy concessions. Stories about cloning with AI and protecting yourself if your iPhone is stolen have been shared. Executives who guide the Instacart CEO, doctors using AI to answer patient questions, and the top colleges for high-paying jobs in tech have been discussed. Europe has asked ChatGPT to disclose their sources, while subscription price creep and custom earplugs are also making news. Apple's new savings account could tempt users into overspending, tech billionaires are betting on fusion as the 'holy grail' for business, and startups are looking to remove 'forever chemicals'. There is a $300 million San Francisco office tower that is mostly empty and open to offers. States are attempting to limit access to online services, while conspiracy theories around the Denver airport are also gaining attention. SpaceX has shared a timeline of what went wrong on the most powerful rocket ever and social media platforms are connecting users with brands and influencers, prompting some to look for smaller networks. Wearable technology can be inaccurate but the broad trends can be helpful, and Musk has made changes to Twitter. Anita Harris is exploring the dangers of online dating, while J.D. Biersdorfer is sharing advice on how to use apps and tools for online collaboration. Finally, the Metropolitan Transportation Authority has stopped providing service alerts on Twitter, Huawei reported an increase in revenue, the US visa agency has raised 'serious concerns', Portland General Electric has announced a major clean energy storage project, time-banking is a new way of getting paid, Belfast tech is using virtual reality to help victims prepare for court, the NHS Covid-19 app was shut down, AI Covid detection research is being adapted to help detect other illnesses, a man in the UK was sentenced for pointing an airgun at a drone, the UK games sector is backing a Microsoft deal to take over Activision, and Wikipedia has refused to comply with the UK's Online Safety Bill's age verification requirements.\n"
+      "Sports News Headlines Summary: Major League Baseball's Shohei Ohtani is proving to be an elite hitter, while China's Ding Liren won the World Chess Championship in a dramatic match. NFL star Lamar Jackson signed a record-breaking contract and QBs dominated the NFL Draft. Basketball star Brittney Griner expressed hope for her future, and Gian\n"
      ]
     }
    ],
@@ -294,7 +316,9 @@
     "        llm, chain_type=\"map_reduce\", map_prompt=MAP_PROMPT,\n",
     "        combine_prompt=REDUCE_PROMPT)\n",
     "    summary = chain.run(docs)\n",
-    "    print(summary)"
+    "    print(summary)\n",
+    "\n",
+    "    "
    ]
   }
  ],
