reorg repo, populate db with summarydb class
Signed-off-by: youliang <tan_you_liang@hotmail.com>

--- a/langchain-test.ipynb
+++ b/langchain-test.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,14 +53,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['https://www.wsj.com/news/sports', 'https://www.nytimes.com/section/sports', 'https://www.apnews.com/hub/sports', 'https://www.bbc.com/sport']\n"
+      "['https://www.wsj.com/', 'https://www.nytimes.com/', 'https://www.apnews.com/', 'https://www.bbc.com/news/']\n"
      ]
     }
    ],
@@ -70,7 +70,7 @@
     "\n",
     "from langchain.document_loaders import SeleniumURLLoader\n",
     "\n",
-    "news_category = NewsCategory.SPORTS\n",
+    "news_category = NewsCategory.ALL\n",
     "urls = news_urls_to_category(news_category)\n",
     "print(urls)\n",
     "\n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -89,14 +89,14 @@
      "text": [
       "4\n",
       "<class 'langchain.schema.Document'>\n",
-      "3144\n",
-      "3919\n",
-      "13222\n",
-      "7226\n",
+      "9001\n",
+      "11612\n",
+      "2534\n",
+      "9332\n",
       " size after truncation of docs\n",
       "3000\n",
       "3000\n",
-      "3000\n",
+      "2534\n",
       "3000\n"
      ]
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
    "source": [
     "from langchain.llms import AzureOpenAI\n",
     "\n",
-    "MODEL_NAME = \"text_curie-001\"\n",
+    "# MODEL_NAME = \"text_curie-001\"\n",
     "MODEL_NAME = \"text-davinci-003\" # Davinci is 10x more expensive, use curie when testing\n",
     "\n",
     "llm = AzureOpenAI(\n",
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -264,18 +264,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ":\n",
       "\n",
-      "Shohei Ohtani of Major League Baseball is proving to be an elite hitter, being able to replicate the best pitches he faces. China's Ding Liren won the World Chess Championship in a dramatic match, and NFL star Lamar Jackson signed a record-breaking contract. QBs dominated the NFL Draft, while basketball star Brittney Griner expressed hope for her future and concern for Americans still held overseas. Giannis Antetokounmpo's \"failure\" speech went viral, and the New York Jets and Knicks both took action. The debate over \"participation trophies\" was tackled, and Washington is preparing for a football apocalypse as the Jets try to acquire Aaron Rodgers. Max Scherzer was suspended for using \"sticky stuff,\" the Oakland A's intend to move to Las Vegas, and the Tampa Bay Rays tied an MLB record with 13 straight wins. The Olympics President proposed a plan for the return of Russian athletes, and the world track and field banned transgender athletes from women's events. German soccer team is offering free tickets to increase attendance, and Manchester City humbled Arsenal in a match. UConn won the NCAA Men's Basketball Title, and a record 9.9 million people tuned in for the NCAA Women's Basketball Final. A dramatic buzzer-beater reveals San Diego State's NCAA Title chase, and a TV show is climbing back up the English soccer ladder. Stephen Curry scored a record-breaking 50 points to lead the Golden State Warriors to victory over the Sacramento Kings in Game 7 of their first-round series. The Knicks absorbed a blow from the Miami Heat in Game 1 of their Eastern Conference semi-final battle. The Toronto Maple Leafs were victorious in the first round of the NHL playoffs, and Japan has proposed a redevelopment plan to level the Meiji Jingu Stadium. Sergio Perez won the Azerbaijan Grand Prix for Red Bull, with Max Verstappen coming in second for the team's third 1-2 finish of the season. The 2023 NFL Draft saw the Philadelphia Eagles, Detroit Lions, and Green Bay Packers make their picks. The Knicks and Heat have a lively postseason history, and Daniel Murphy is attempting a comeback in the independent minor leagues. Trae Young, Jaylen Brown, and Mikal Bridges of the NBA are learning to handle the pressure of the spotlight. Jimmy Butler scored 36 points, including a go-ahead basket with 11.4 seconds remaining, as the Miami Heat defeated the New York Knicks 108-101 in the second round of the playoffs. The Houston Texans and Philadelphia Eagles were given the highest grades in the NFL draft due to their selections. Texas Rangers ace Jacob deGrom was placed on the 15-day injured list due to right forearm tightness, and Philadelphia Phillies star Bryce Harper could return to the lineup as early as Tuesday. The San Diego Padres rallied to sweep a two-game series in Mexico City against the San Francisco Giants. Caleb Williams of Southern California and North Carolina's Drake Maye are already being projected as the top two picks in the 2024 NFL draft. Erling Haaland and Harry Kane both scored landmark goals on Sunday, with Haaland's helping Manchester City move closer to a treble of trophies. Liverpool boss Jurgen Klopp questioned referee Paul Tierney's decisions after the Reds' 4-3 win over Tottenham, and the youthful Kings forced a Game 7 against the Warriors. Memphis Grizzlies sparkplug Dillon Brooks was fined $25,000 for not talking to the media. Manchester United's Bruno Fernandes scored the only goal of the game to secure a 1-0 win over Aston Villa. American golfer Tony Finau won the Mexico Open, Mark Selby compiled a 147 in the final but eventually lost out to Luca Brecel in the World Snooker Championship. Russian tennis player Daria Kasatkina expressed her joy at returning to Wimbledon, and a number of key questions were raised after the historic Six Nations tournament. Newcastle United beat Southampton 2-0, while Leeds United were on the brink of relegation. Exeter were eliminated from the Champions Cup by La Rochelle, and Barcelona's Alexia Putellas made her return from an ACL injury. Inter Milan's Achraf Hakimi was sent off in a game with Paris Saint-Germain, and Manchester United fans held a protest at Aston Villa. Simon Yates secured the Tour de Romandie win, and Manchester City manager Mike Taylor credited their current form to their impressive goal difference. Finally, the legacy of Dutch football legend Johan Cruyff was remembered on what would have been his 75th birthday. \n",
       "\n",
-      "Sports News Headlines Summary: Major League Baseball's Shohei Ohtani is proving to be an elite hitter, while China's Ding Liren won the World Chess Championship in a dramatic match. NFL star Lamar Jackson signed a record-breaking contract and QBs dominated the NFL Draft. Basketball star Brittney Griner expressed hope for her future, and Gian\n"
+      "Headlines from around the world feature a variety of news stories. In Ukraine, more than 20,000 Russians have died in Bakhmut and hundreds of protesters have been arrested in France over a pension reform. JP Morgan has acquired troubled US bank First Republic in a rescue deal, which will see them take on all its $92 billion in deposits and buy most of its assets. In the US, a Texas father recounts how a gunman opened fire on his home and killed his wife and son. Meanwhile, celebrities are preparing for the Met Gala 2023 and rock band Aerosmith is announcing its farewell tour. Meanwhile, Disney is facing a countersuit in its feud with Florida. Additionally, the US government is lifting most federal COVID-19 vaccine mandates, and US and Philippines relations remain \"ironclad\" amidst tension with China. Goldman Sachs has recently concluded the dollar is up to 15% overvalued, and Elon Musk is attempting to direct AI yet again with his latest startup. Gov. Ron DeSantis of Florida has authorized lawyers to sue Disney without providing details, and American journalists have long been navigating clampdowns in Russia, evident by the arrest of WSJ reporter Evan Gershkovich. Lastly, the private calendar of Jeffrey Epstein reveals prominent names, EY’s breakup plan is really dead, a kidney transplant drug may be able to keep you from aging, Boston is reconnecting with the art of the choke, California college students are in a desperate competition for spots in trailer parks, and West Virginia is facing storm clouds. Lastly, Hippos spawned from drug lord Pablo Escobar’s ranch won’t stop multiplying.\n"
      ]
     }
    ],
